2005-09-25  Moritz Schulte  <moritz@g10code.com>

	* conf: New directory.
	* configure.ac (AC_CONFIG_FILES): Added: conf/Makefile.am.
	* Makefile.am (SUBDIRS): Added: conf.
	* THANKS: updated.

2005-07-13  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Bump version number up to 0.3-cvs.

2004-11-29  Moritz Schulte  <moritz@g10code.com>

	* THANKS: New file.
	* configure.ac: Bumped version number up to 0.2; released.

2004-11-27  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Bumped version up to 0.2-cvs2.

2004-10-23  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Updated libusb related code from gnupg.

2004-10-22  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Use AC_GNU_SOURCE.

2004-06-22  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Check for GnuPG types.

2004-05-13  Moritz Schulte  <moritz@g10code.com>

	* configure.ac: Fix comment.