@@ -3,3 +3,4 @@ patches or testing:
 
 	Alessandro Rubini
 	Joachim Breitner
+	Stefano Maffulli
