@@ -1,0 +1,4 @@
+2005-10-08  Moritz Schulte  <moritz@g10code.com>
+
+	* Makefile.am: Remove install-pam-module target.
+
