@@ -1,3 +1,13 @@
+2005-10-08  Moritz Schulte  <moritz@g10code.com>
+
+	* configure.ac (POLDI_CONF_DIRECTORY): Only set
+	PAM_MODULE_DIRECTORY in case it is the empty string; Use libdir
+	instead of hard-coded path.  This fixes `make distcheck', but it
+	forces users who want to install the PAM module directly beneath
+	/lib/security to set PAM_MODULE_DIRECTORY accordingly.
+	* THANKS: Updated.
+	* Makefile.am: Remove install-pam-module target.
+
 2005-09-25  Moritz Schulte  <moritz@g10code.com>
 
 	* conf: New directory.
